--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,20 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".CrimeActivity"
-            android:label="@string/app_name" >
+        <activity android:name=".CrimeListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".CrimeActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".CrimePagerActivity"
+            android:label="@string/title_activity_crime_pager" >
         </activity>
     </application>
 
